# ai-agent-playground

./: .dockerignore  .env.example  .gitignore  .hermes_test.py  .hermes_test_result.txt  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  FINAL_REPORT.md  OPTIMIZATION_DOCS.md  PAPER.md  README.md  SOUL.md  TUTORIAL.md  USER.md  _b3_bench_out.txt  _chroma_check.txt  _code_bench_out.txt  _cross_domain_out.txt  _debate_fix.txt  _debug_out.txt  _demo_result.txt  _e2e_result.txt  _hard_bench_result.txt  _kb_build_out.txt  _master_final.txt  _master_out.txt  _meta_paper.txt  _more_papers.txt  _multi_agent_out.txt  _ollama_check.txt  _paper_abstract.txt  _papers_learn.txt  _papers_list.txt  _pipeline_demo.txt  _react_read.txt  _sandbox_result.txt  _scaling_out.txt  (+36 more)
.claude/: settings.local.json
agent/: __init__.py  a2a.py  alerting.py  app_ui.py  async_core.py  async_llm_client.py  attn_router.py  auto_memory.py  autopilot.py  blue_green.py  bootstrap.py  chat_ui.py  context_compressor.py  core.py  cost_tracker.py  crew_agent.py  cross_reviewer.py  dashboard.py  debate.py  deploy.py  episodic_memory.py  eval_gate.py  evolution.py  goal_tracker.py  governance.py  hermes.py  identity.py  intrusion.py  knowledge.py  llm_client.py  matrix.py  memory.py  message_bus.py  meta_agent.py  monitoring.py  orchestrator.py  platform_utils.py  poison_detector.py  portfolio.py  reflect_action.py  (+15 more)
ai_agent_playground/: __init__.py  agent_registry.py  base.py  cache.py  config.py  constraints.py  evaluator_agent.py  extension.py  fewshot.py  hallucination_detector.py  llm.py  (+11 more)
(+193 files in other folders)
