[project]
name = "ai-agent-playground"
version = "0.1.0"
description = "Building AI agents with Python, LangChain, and Claude API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.102.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=1.5.9",
    "duckduckgo_search>=7.5.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "openai>=1.55.0",
    "prometheus-client>=0.21.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "sse-starlette>=2.2.0",
    "streamlit>=1.57.0",
    "transformers>=4.48.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
# 在 pyproject.toml 末尾添加或修改
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "agent",
    "ai_agent_playground",
    "code_review_agent",
    "demo",
    "eval_harness",
    "hello_agent",
    "lora_finetune",
    "mcp_agent",
    "mcp_hermes",
    "mini_bert",
    "multi_agent_crew",
    "observability",
    "rag_qa_system",
    "resume_matcher",
    "scripts",
    "tests",
]

[tool.pytest.ini_options]
addopts = "-p no:locust -v --ignore=.hermes_test.py --ignore=.run_test.py --ignore=_run_tests.py --ignore=_route_test.py --ignore=eval_harness --ignore=benchmark_dataset.jsonl"